<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="e_welcomeMuscleMessage"> Wähle eine Muskelgruppe</string>
    <string name="e_waehle_eine_muskelgruppe">Wähle eine Muskelgruppe</string>
    <string name="e_difficulty_label">Difficulty: %d</string>
    <string name="p_progression_title">Fortschritt</string>
    <string name="p_goal">Ziel :</string>
    <string name="p_edit_goal">Ziel bearbeiten</string>
    <string name="p_new_data_entry">Neuer Eintrag</string>
    <string name="p_bmi">BMI</string>
    <string name="p_finished_sets">Abgeschlossene Sätze</string>
    <string name="p_dialog_gain_weight">Zunehmen</string>
    <string name="p_dialog_maintain_weight">Gewicht halten</string>
    <string name="p_dialog_lose_weight">Abnehmen</string>
    <string name="p_dialog_weight">Gewicht (kg)</string>
    <string name="p_dialog_height">Optional: Größe (cm)</string>
    <string name="p_dialog_kfa">Optional: KFA (%)</string>
    <string name="e_exercise_title">Übungen</string>
    <string name="n_nutrition_title">Ernährung</string>
    <string name="n_putInYourNutrition">Gib ein Lebensmittel ein</string>
    <string name="n_nutrition">Lebensmittel</string>
    <string name="n_search">Suchen</string>
    <string name="n_noConnectionText">Keine Internetverbindung verfügbar</string>
    <string name="n_searchConnection">Suche Internetverbindung...</string>
    <string name="n_connectionAvailable">Online</string>
    <string name="n_connectionNotAvailable">Offline</string>
    <string name="n_apiFailure">Es gab einen Fehler beim Abrufen der Daten</string>
    <string name="t_activeListHeading"><u>Aktiver Trainingsplan</u></string>
    <string name="t_allTrainingPlansHeading"><u>Alle Trainingspläne</u></string>
    <string name="t_view_plan">Trainingsplan anzeigen</string>
    <string name="t_add_plan">Trainingsplan erstellen</string>
    <string name="t_add_day">Trainingstag erstellen</string>
    <string name="t_add_exercise">Übung einem Tag hinzufügen</string>
    <string name="t_edit_plan">Trainingsplan bearbeiten</string>
    <string name="t_delete_plan">Trainingsplan löschen</string>
    <string name="t_name_plan">Trainingsplan Name</string>
    <string name="t_training_title">Training</string>
    <string name="t_view_day">Trainingstag anzeigen</string>
    <string name="t_edit_day">Trainingstag bearbeiten</string>
    <string name="t_delete_day">Trainingstag löschen</string>
    <string name="t_name_day">Trainingstag Name</string>
    <string name="t_name_exercise">Trainingsübung Name</string>
    <string name="t_exercises">Übungen des Trainingtags</string>
    <string name="t_date_placeholder">01–01–2025</string>
    <string name="t_setnumber_placeholder">Set 1: </string>
    <string name="t_weight_placeholder">100 kg</string>
    <string name="t_reps_placeholder">10 reps</string>
    <string name="t_add_set">Satz hinzufügen</string>
    <string name="o_start">Profil erstellen</string>
    <string name="o_birthday_question">Wann hast du Geburtstag?</string>
    <string name="o_birthday_selection">Geburtsdatum auswählen</string>
    <string name="o_next">Weiter</string>
    <string name="o_goal_question">Was ist dein Ziel?</string>
    <string name="o_goal_option_lose">Abnehmen</string>
    <string name="o_goal_option_maintain">Gewicht halten</string>
    <string name="o_goal_option_gain">Zunehmen</string>
    <string name="o_height_question">Wie groß bist du? (in cm)</string>
    <string name="o_kfa_question">Wie hoch ist dein Körperfettanteil (KFA)</string>
    <string name="o_kfa_help">KFA Hilfe</string>
    <string name="o_name_question">Wie ist dein Name?</string>
    <string name="o_training_days_question">Wie viele Tage pro Woche willst du trainieren?</string>
    <string name="o_training_days_selection">3 days per week</string>
    <string name="o_finish">Reise starten!</string>
    <string name="o_weight_question">Wie viel wiegtst du? (in kg)</string>
    <string name="n_product_image_alt">Bild</string>
</resources>