<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/o_goal_question"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/radioGroupGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioLoseWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/o_goal_option_lose"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioMaintainWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/o_goal_option_maintain"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioGainWeight"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/o_goal_option_gain"
            android:textColor="@android:color/white"
            app:buttonTint="@android:color/white" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/background"
        android:text="@string/o_next"
        android:textColor="@android:color/black" />

</LinearLayout>
